<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="font">Roboto.ttf</string>
    <string name="font_bold">Roboto-Bold.ttf</string>
    <string name="font_light">Roboto-Light.ttf</string>
    <string name="font_thin">Roboto-Thin.ttf</string>
    <string name="font_lcd">LiquidCrystalBold.otf</string>
    <string name="flurry_key">V48BBYHMSMYBDSF4RJSC</string>
    <string name="flurry_key_dev">V48BBYHMSMYBDSF4RJSC</string>
    <string name="app_name">Umbee</string>
    <string name="app_subtitle">Your umbrella-suggesting companion!</string>
    <string name="service_name">Umbee Service</string>
    <string name="content_description">Content Description</string>
    <string name="enable_umbee">Enable umbee</string>
    <string name="umbee_lowercase">umbee</string>
    <string name="location">ZIP code</string>
    <string name="location_hint">22901</string>
    <string name="update_time">Update time</string>
    <string name="alert_type">Alert type</string>
    <string name="custom_threshold_settings">Custom threshold settings</string>
    <string name="no_data_found">no data found.</string>
    <string name="umbee_thinks_no">Umbee thinks you don\'t need it.</string>
    <string name="umbee_thinks_yes">Umbee thinks you need it.</string>
    <string name="umbee_thinks_maybe">Umbee thinks you might need it.</string>
    <string name="umbee_thinks_probs">Umbee thinks you probs need it.</string>
    <string name="widget_you_need_it">YOU NEED IT.</string>
    <string name="widget_you_dont_need_it">YOU DON\'T NEED IT.</string>
    <string name="widget_you_might_need_it">YOU MIGHT NEED IT.</string>
    <string name="widget_you_probs_need_it">YOU PROBS NEED IT.</string>
    <string name="alert_example_simple_big">Umbee thinks you need it.</string>
    <string name="alert_example_simple_small">Morning precipitation chance is 17\%%.</string>
    <string name="alert_example_simple_small2">Noon-to-midnight precipitation chance is 65\%%.</string>
    <string name="alert_example_four_big">Umbee thinks you might need it.</string>
    <string name="alert_example_four_small">Morning precipitation chance is 17\%%.</string>
    <string name="alert_example_four_small2">Noon-to-midnight precipitation chance is 50\%%.</string>
    <string name="alert_example_percent_big">60\%% chance of rain in the morning.</string>
    <string name="alert_example_percent_small">0\%% from noon to midnight</string>
    <string name="alert_example_percent_small2">blahblahblah</string>
    <string name="alert_example">Alert Example</string>
    <string name="restart_umbee">Restart Umbee</string>
    <string name="advanced_options">Advanced options</string>
    <string name="test_notification">Get current alert</string>
    <string name="triple_threshold_think">Umbee will think you...</string>
    <string name="test_notif_fetching">Fetching current weather...</string>
    <string name="zip_code_fetching">Attempting to set location...</string>
    <string name="please_set_location">Please set your zip code!</string>
    <string name="enable_location_updates">Smart location updates</string>
    <string name="enable_location_updates_sub">(Umbee will update its location while on-the-move.)</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="precip_noaa_morning">morning</string>
    <string name="precip_noaa_evening">evening</string>
    <string name="precip_noaa_today">today\'s precipitation</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="zip_code_saved">Zip code saved!</string>
    <string name="not_valid_zip">Not a valid zip code.</string>
    <string name="about_umbee">About Umbee</string>
    <string name="about_umbee_content">Umbee checks with NOAA to get precipitation data for the next several days. Using
        this data, umbee can notify you of whether you\'ll need an umbrella when you wake up in the morning!\n\nYou can
        configure umbee to give you more detailed updates and set your own custom thresholds. Check out the advanced
        options for more details!
    </string>
    <string name="about_umbee_content_dev">\nDeveloped by\nDoom on a Fireball Studios\ndoomonafireball@gmail.com
    </string>
    <string name="notify_tomorrow">Notify me for tomorrow</string>
    <string name="need_it_c">NEED IT</string>
    <string name="dont_need_it_c">DON\'T NEED IT</string>
    <string name="maybs_need_it_c">MAYBS NEED IT</string>
    <string name="probs_need_it_c">PROBS NEED IT</string>
    <string name="dynamic_simple_morning_short">Morning precipitation: %1$s%%</string>
    <string name="dynamic_simple_evening_short">Evening precipitation: %1$s%%</string>
    <string name="umbee_thinks_no_short">you don\'t need it.</string>
    <string name="umbee_thinks_yes_short">you need it.</string>
    <string name="umbee_thinks_maybe_short">you might need it.</string>
    <string name="umbee_thinks_probs_short">you probs need it.</string>
    <string name="today_c">Today</string>
    <string name="tomorrow_c">Tomorrow</string>

    <string name="dynamic_single_threshold">Umbee will think you need it at %1$s%% and higher.</string>
    <string name="dynamic_triple_threshold1">...might need it at %1$s%% to %2$s%%.</string>
    <string name="dynamic_triple_threshold2">...probably need it at %1$s%% to %2$s%%.</string>
    <string name="dynamic_triple_threshold3">...definitely need it at %1$s%% and higher.</string>
    <string name="dynamic_simple_morning">Morning precipitation chance is %1$s%%.</string>
    <string name="dynamic_simple_evening">Evening precipitation chance is %1$s%%.</string>
    <string name="dynamic_umbee_is_set_for">Umbee is set for %1$s at %2$s!</string>
    <string name="dynamic_int_percentage">%1$s%%</string>
    <string name="dynamic_day_precipitation">%1$s\'s precipitation</string>
    <string name="not_configured">NOT CONFIGURED</string>
    <string name="not_configured_expanded_title">Umbee not configured</string>
    <string name="not_configured_expanded_body">Tap to configure.</string>
    <string name="umbee_dashclock_description">Displays the morning and evening precipitation chances for today or
        tomorrow, depending on how you have Umbee configured.
    </string>

    <string name="prefs_file">UMBEEPREFS</string>

    <string-array name="alert_type_array">
        <item>Simple Yes/No</item>
        <item>Yes/No/Maybe/Probably</item>
        <!--<item>Detailed \%%</item>-->
    </string-array>
</resources>
