<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
            android:id="@+id/RL_title_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abs__ab_transparent_light_holo"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
        <ImageView
                android:id="@+id/IV_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu_info_details"
                android:contentDescription="@string/content_description"/>
        <oak.widget.TextViewWithFont
                android:id="@+id/TV_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/IV_icon"
                android:layout_centerVertical="true"
                android:text="@string/about_umbee"
                android:textSize="@dimen/default_text_size_header"
                android:textColor="@color/abs__holo_blue_light"
                oak:font="@string/font"/>
    </RelativeLayout>
    <ScrollView
            android:id="@+id/SV_about_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_title_container">
        <LinearLayout
                android:id="@+id/LL_about_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">
            <oak.widget.TextViewWithFont
                    android:id="@+id/TV_about_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_umbee_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size"
                    oak:font="@string/font"/>
            <oak.widget.TextViewWithFont
                    android:id="@+id/TV_about_content_dev"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:autoLink="email"
                    android:text="@string/about_umbee_content_dev"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size"
                    oak:font="@string/font"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>