<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/view_pager_height"
        android:orientation="vertical"
        android:gravity="center_vertical">
    <oak.widget.TextViewWithFont
            android:id="@+id/TV_precip_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/precip_noaa_today"
            android:textColor="@color/yellow"
            android:textSize="@dimen/todays_precipitation_text_size"
            android:shadowColor="@color/gray_shadow_for_yellow_text"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            oak:font="@string/font_light"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:orientation="horizontal">
        <oak.widget.TextViewWithFont
                android:id="@+id/TV_morning_precip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:textSize="@dimen/default_text_size_huge"
                android:shadowColor="@color/gray_shadow_for_yellow_text"
                android:shadowDx="2.0"
                android:shadowDy="2.0"
                android:shadowRadius="2.0"
                oak:font="@string/font_thin"/>
        <oak.widget.TextViewWithFont
                android:id="@+id/TV_evening_precip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:textSize="@dimen/default_text_size_huge"
                android:shadowColor="@color/gray_shadow_for_yellow_text"
                android:shadowDx="2.0"
                android:shadowDy="2.0"
                android:shadowRadius="2.0"
                oak:font="@string/font_thin"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:orientation="horizontal">
        <oak.widget.TextViewWithFont
                android:id="@+id/TV_morning_precip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/precip_noaa_morning"
                android:textColor="@color/yellow"
                android:textSize="@dimen/default_text_size_large"
                android:shadowColor="@color/gray_shadow_for_yellow_text"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                oak:font="@string/font_light"/>
        <oak.widget.TextViewWithFont
                android:id="@+id/TV_evening_precip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/precip_noaa_evening"
                android:textColor="@color/yellow"
                android:textSize="@dimen/default_text_size_large"
                android:shadowColor="@color/gray_shadow_for_yellow_text"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                oak:font="@string/font_light"/>
    </LinearLayout>
</LinearLayout>