<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:oak="http://oak/oak/schema"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
        <FrameLayout
                android:id="@+id/FL_todays_precip_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        <Button
                style="@style/PreferenceButton"
                android:id="@+id/BTN_test_notif"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_notification"/>
        <RelativeLayout
                android:id="@+id/RL_enable_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <CheckBox
                    android:id="@+id/CB_enable_umbee"
                    style="@style/UmbeeCheckBox"
                    android:layout_alignParentRight="true"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/CB_enable_umbee"
                    android:orientation="vertical">
                <oak.TextViewWithFont
                        style="@style/PreferenceTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_umbee"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="@integer/preference_sum"
                android:orientation="horizontal"
                android:gravity="center_vertical">
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/preference_button_text_weight"
                    android:orientation="vertical">
                <oak.TextViewWithFont
                        style="@style/PreferenceTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_time"/>
            </LinearLayout>
            <Button
                    style="@style/PreferenceButton"
                    android:id="@+id/BTN_update_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/preference_button_weight"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="@integer/preference_sum"
                android:orientation="horizontal"
                android:gravity="center_vertical">
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/preference_button_text_weight"
                    android:orientation="vertical">
                <oak.TextViewWithFont
                        style="@style/PreferenceTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"/>
            </LinearLayout>
            <oak.CancelEditText
                    android:id="@+id/ET_location"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/preference_button_weight"
                    android:gravity="center"
                    android:hint="@string/location_hint"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    oak:cancelDrawable="@drawable/ic_close"/>
        </LinearLayout>
        <Button
                style="@style/PreferenceButton"
                android:id="@+id/BTN_advanced_options"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/advanced_options"/>
        <LinearLayout
                android:id="@+id/LL_advanced_options_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="@integer/preference_sum"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/preference_button_text_weight"
                        android:orientation="vertical">
                    <oak.TextViewWithFont
                            style="@style/PreferenceTitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alert_type"/>
                </LinearLayout>
                <Button
                        style="@style/PreferenceButton"
                        android:id="@+id/BTN_alert_type"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/preference_button_weight"/>
            </LinearLayout>
            <RelativeLayout
                    android:id="@+id/RL_smart_location_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <CheckBox
                        android:id="@+id/CB_enable_smart_location"
                        style="@style/UmbeeCheckBox"
                        android:layout_alignParentRight="true"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@id/CB_enable_smart_location"
                        android:orientation="vertical">
                    <oak.TextViewWithFont
                            style="@style/PreferenceTitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_location_updates"/>
                </LinearLayout>
            </RelativeLayout>
            <oak.TextViewWithFont
                    style="@style/PreferenceSubtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:text="@string/enable_location_updates_sub"/>
            <!--
  <oak.TextViewWithFont
    style="@style/PreferenceTitleText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/alert_example"/>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/alert_example">
    <oak.TextViewWithFont
        android:id="@+id/TV_alert_example_big"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        android:shadowDx="0.1"
        android:shadowDy="0.1"
        android:shadowRadius="0.1"
        android:shadowColor="@android:color/black"/>
    <oak.TextViewWithFont
        android:id="@+id/TV_alert_example_small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        android:shadowDx="0.1"
        android:shadowDy="0.1"
        android:shadowRadius="0.1"
        android:shadowColor="@android:color/black"/>
    <oak.TextViewWithFont
        android:id="@+id/TV_alert_example_small2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        android:shadowDx="0.1"
        android:shadowDy="0.1"
        android:shadowRadius="0.1"
        android:shadowColor="@android:color/black"/>
  </LinearLayout>          -->
            <RelativeLayout
                    android:id="@+id/RL_threshold_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <CheckBox
                        android:id="@+id/CB_custom_threshold"
                        style="@style/UmbeeCheckBox"
                        android:layout_alignParentRight="true"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@id/CB_enable_umbee"
                        android:orientation="vertical">
                    <oak.TextViewWithFont
                            style="@style/PreferenceTitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/custom_threshold_settings"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                    android:id="@+id/LL_single_threshold_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                <SeekBar
                        style="@style/PreferenceSeekBar"
                        android:id="@+id/SB_single_threshold"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                <oak.TextViewWithFont
                        style="@style/PreferenceSubtitleText"
                        android:id="@+id/TV_single_threshold"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/LL_triple_threshold_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                <SeekBar
                        style="@style/PreferenceSeekBarTransparent"
                        android:id="@+id/SB_triple_threshold_1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                <SeekBar
                        style="@style/PreferenceSeekBarTransparent"
                        android:id="@+id/SB_triple_threshold_2"
                        android:layout_marginTop="10dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                <SeekBar
                        style="@style/PreferenceSeekBarTransparent"
                        android:id="@+id/SB_triple_threshold_3"
                        android:layout_marginTop="10dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                <oak.TextViewWithFont
                        style="@style/PreferenceSubtitleText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/triple_threshold_think"/>
                <oak.TextViewWithFont
                        style="@style/PreferenceSubtitleText"
                        android:id="@+id/TV_triple_threshold"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"/>
                <oak.TextViewWithFont
                        style="@style/PreferenceSubtitleText"
                        android:id="@+id/TV_triple_threshold2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"/>
                <oak.TextViewWithFont
                        style="@style/PreferenceSubtitleText"
                        android:id="@+id/TV_triple_threshold3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"/>
            </LinearLayout>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>